[package]
name = "stringsext"
version = "2.3.5"
authors = ["Jens Getreu <getreu@web.de>"]
edition = "2021"
readme = "README.md"
description = "find multi-byte-encoded strings in binary data"
license = "MIT/Apache-2.0"
categories = ["command-line-utilities", "encoding", "text-processing",
              "filesystem"]
documentation = "https://blog.getreu.net/projects/stringsext/stringsext--manpage.html"
homepage = "https://blog.getreu.net/projects/stringsext/"
repository = "https://github.com/getreu/stringsext"
rust-version = "1.80.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs= "0.8.34"
lazy_static = "1.5.0"
serde = "1.0.210"
serde_derive = "1.0.210"
itertools = "0.13.0"
scoped_threadpool = "0.1.9"
anyhow = "1.0.89"
clap = "4.5.19"
structopt = "0.3.26"
pin-project = "1.1.5"

# Metadata for Debian packages with cargo-deb

[package.metadata.deb]
maintainer = "Jens Getreu, <getreu@web.de>"
copyright = "2015-2020, Jens Getreu <getreu@web.de>"
depends = "$auto"
extended-description = """\
stringsext is a Unicode enhancement of the GNU strings tool with additional\
functionalities: stringsext recognizes Cyrillic, Arabic, CJKV characters and\
other scripts in all supported multi-byte-encodings, while GNU strings fails\
in finding any of these scripts in UTF-16 and many other encodings. """
section = "utilities"
priority = "optional"
assets = [
    ["doc/build/html/index.html", "usr/share/doc/stringsext/", "644"],
    ["doc/build/man/man1/stringsext.1.gz", "/usr/share/man/man1/", "644"],
    ["target/release/stringsext", "usr/bin/", "755"]
]
